# Legal-Assistant-Agent

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/middleware/: auth.py  error_handler.py  rate_limit.py
api/models/: requests.py  responses.py
api/routes/: auth.py  health.py
core/: config.py  exceptions.py  logging.py  metrics.py
evaluation/: dataset_manager.py  llm_judge.py  metrics_tracker.py  ragas_evaluator.py
generation/: citation_engine.py  llm_router.py  response_synthesizer.py
generation/prompts/: qa.py  system.py
ingestion/: chunking.py  llamaparse_client.py  metadata_extractor.py  ocr_fallback.py  parser.py  vision_parser.py
retrieval/: embeddings.py  hybrid_search.py  query_engine.py  reranker.py  vector_store.py
security/: guardrails.py  input_validator.py  pii_redactor.py
test/: conftest.py  test_config.py  test_exceptions.py  test_logging.py  test_metrics.py  test_retry.py
test/e2e/: conftest.py  test_document_ingestion.py  test_evaluation_flow.py  test_full_workflow.py  test_performance.py  test_query_pipeline.py  test_security_integration.py
utils/: retry.py
